syntax = "proto3";
package pb;

message CsAccountLogin {
  uint32 RoleID = 1;
}

message ScAccountLogin {
  uint32 Result = 1; // 1-成功 2-失败
}